// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders components/welcome/demo/background.tsx correctly 1`] = `
<div
  class="ant-flex ant-flex-align-stretch ant-flex-vertical"
>
  <div
    class="ant-card ant-card-bordered"
    style="border-radius:0"
  >
    <div
      class="ant-card-body"
    >
      <div
        class="ant-welcome ant-welcome-filled ant-flex"
        style="background-image:linear-gradient(97deg, #f2f9fe 0%, #f7f3ff 100%)"
      >
        <div
          class="ant-welcome-icon"
        >
          <img
            alt="icon"
            src="https://mdn.alipayobjects.com/huamei_iwk9zp/afts/img/A*7iaeT54QpcQAAAAAAAAAAAAADgCCAQ/original"
          />
        </div>
        <div
          class="ant-welcome-content-wrapper ant-flex ant-flex-align-stretch ant-flex-vertical"
        >
          <h4
            class="ant-typography ant-welcome-title"
          >
            Hello, I'm Ant Design X
          </h4>
          <span
            class="ant-typography ant-welcome-description"
          >
            Base on Ant Design, AGI product interface solution, create a better intelligent vision~
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    class="ant-card ant-card-bordered"
    style="border-radius:0"
  >
    <div
      class="ant-card-body"
    >
      <div
        class="ant-welcome ant-welcome-filled ant-flex"
        style="background-image:linear-gradient(97deg, #001529 0%, #000000 100%)"
      >
        <div
          class="ant-welcome-icon"
        >
          <img
            alt="icon"
            src="https://mdn.alipayobjects.com/huamei_iwk9zp/afts/img/A*7iaeT54QpcQAAAAAAAAAAAAADgCCAQ/original"
          />
        </div>
        <div
          class="ant-welcome-content-wrapper ant-flex ant-flex-align-stretch ant-flex-vertical"
        >
          <h4
            class="ant-typography ant-welcome-title"
          >
            Hello, I'm Ant Design X
          </h4>
          <span
            class="ant-typography ant-welcome-description"
          >
            Base on Ant Design, AGI product interface solution, create a better intelligent vision~
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders components/welcome/demo/basic.tsx correctly 1`] = `
<div
  class="ant-welcome ant-welcome-filled ant-flex"
>
  <div
    class="ant-welcome-icon"
  >
    <img
      alt="icon"
      src="https://mdn.alipayobjects.com/huamei_iwk9zp/afts/img/A*7iaeT54QpcQAAAAAAAAAAAAADgCCAQ/original"
    />
  </div>
  <div
    class="ant-welcome-content-wrapper ant-flex ant-flex-align-stretch ant-flex-vertical"
  >
    <h4
      class="ant-typography ant-welcome-title"
    >
      Hello, I'm Ant Design X
    </h4>
    <span
      class="ant-typography ant-welcome-description"
    >
      Base on Ant Design, AGI product interface solution, create a better intelligent vision~
    </span>
  </div>
</div>
`;

exports[`renders components/welcome/demo/variant.tsx correctly 1`] = `
<div
  class="ant-welcome ant-welcome-borderless ant-flex"
>
  <div
    class="ant-welcome-icon"
  >
    <img
      alt="icon"
      src="https://mdn.alipayobjects.com/huamei_iwk9zp/afts/img/A*7iaeT54QpcQAAAAAAAAAAAAADgCCAQ/original"
    />
  </div>
  <div
    class="ant-welcome-content-wrapper ant-flex ant-flex-align-stretch ant-flex-vertical"
  >
    <div
      class="ant-welcome-title-wrapper ant-flex ant-flex-align-flex-start"
    >
      <h4
        class="ant-typography ant-welcome-title"
      >
        Hello, I'm Ant Design X
      </h4>
      <div
        class="ant-welcome-extra"
      >
        <div
          class="ant-space ant-space-horizontal ant-space-align-center ant-space-gap-row-small ant-space-gap-col-small"
        >
          <div
            class="ant-space-item"
          >
            <button
              class="ant-btn ant-btn-default ant-btn-color-default ant-btn-variant-outlined ant-btn-icon-only"
              type="button"
            >
              <span
                class="ant-btn-icon"
              >
                <span
                  aria-label="share-alt"
                  class="anticon anticon-share-alt"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="share-alt"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M752 664c-28.5 0-54.8 10-75.4 26.7L469.4 540.8a160.68 160.68 0 000-57.6l207.2-149.9C697.2 350 723.5 360 752 360c66.2 0 120-53.8 120-120s-53.8-120-120-120-120 53.8-120 120c0 11.6 1.6 22.7 4.7 33.3L439.9 415.8C410.7 377.1 364.3 352 312 352c-88.4 0-160 71.6-160 160s71.6 160 160 160c52.3 0 98.7-25.1 127.9-63.8l196.8 142.5c-3.1 10.6-4.7 21.8-4.7 33.3 0 66.2 53.8 120 120 120s120-53.8 120-120-53.8-120-120-120zm0-476c28.7 0 52 23.3 52 52s-23.3 52-52 52-52-23.3-52-52 23.3-52 52-52zM312 600c-48.5 0-88-39.5-88-88s39.5-88 88-88 88 39.5 88 88-39.5 88-88 88zm440 236c-28.7 0-52-23.3-52-52s23.3-52 52-52 52 23.3 52 52-23.3 52-52 52z"
                    />
                  </svg>
                </span>
              </span>
            </button>
          </div>
          <div
            class="ant-space-item"
          >
            <button
              class="ant-btn ant-btn-default ant-btn-color-default ant-btn-variant-outlined ant-btn-icon-only"
              type="button"
            >
              <span
                class="ant-btn-icon"
              >
                <span
                  aria-label="ellipsis"
                  class="anticon anticon-ellipsis"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="ellipsis"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M176 511a56 56 0 10112 0 56 56 0 10-112 0zm280 0a56 56 0 10112 0 56 56 0 10-112 0zm280 0a56 56 0 10112 0 56 56 0 10-112 0z"
                    />
                  </svg>
                </span>
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
    <span
      class="ant-typography ant-welcome-description"
    >
      Base on Ant Design, AGI product interface solution, create a better intelligent vision~
    </span>
  </div>
</div>
`;
